language/move-lang/tests/move_check/typing/block_with_statements_invalid.exp
error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:4:16 ───
   │
 4 │         ({ let x = 0; x } : bool);
   │                - The type: integer
   │                             ---- Is not compatible with: 'bool'
   │                             ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:5:23 ───
   │
 5 │         ({ let x = 0; &x } : u64);
   │                       -- The type: '&{integer}'
   │                              --- Is not compatible with: 'u64'
   │                              ^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:6:23 ───
   │
 6 │         ({ let y = 0; &mut (y + 1) } : ());
   │                       ------------ The type: '&mut {integer}'
   │                                        -- Is not compatible with: '()'
   │                                        ^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 7 │         ({ let r = { let r = R {}; r }; r } : R);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   │                                               - The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/block_with_statements_invalid.move:8:23 ───
   │
 8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
   │                       ----------------- The expression list type of length 3: '({integer}, bool, bool)'
   │                                             ----------- Is not compatible with the expression list type of length 2: '(u64, bool)'
   │                                             ^^^^^^^^^^^ Invalid type annotation
   │

